# fake-t-shirt-spanner-cdc

./: README.md  demo_pubsub_consumer.py  generate_test_data.py  pyproject.toml
schemas/: product_catalogue.sql
